# macStickyNotes

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.xeoa-vut.css  2.D37z8JIA.css
.svelte-kit/output/client/_app/immutable/chunks/: 25g6-NV2.js  CRj6ZoC0.js  CkIiNAt7.js
.svelte-kit/output/client/_app/immutable/entry/: app.BrTI5h1u.js  start.Bzc_Q0fp.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.BrxQMpkB.js  1.C9uz6fv5.js  2.CKa0g3uD.js
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _page.BCFfi4Ml.css
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anchor.rs  commands.rs  lib.rs  main.rs  menu.rs  save_load.rs  settings.rs  windows.rs
src/lib/: Editor.svelte  NotesManager.svelte  StickyNote.svelte
src/routes/: +layout.ts  +page.svelte  app.css
